terraform/modules/security-groups/main.tf
resource "aws_security_group" "main" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {

from_port   = 8000

to_port     = 8000

protocol    = "tcp"

cidr_blocks = ["49.204.123.10/32"]
}

ingress {

from_port   = 3000

to_port     = 3000

protocol    = "tcp"

cidr_blocks = ["0.0.0.0/0"]
}

ingress {

from_port   = 8080

to_port     = 8080

protocol    = "tcp"

cidr_blocks = ["49.204.123.10/32"]
}

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
